--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "bugs": {
     "url": "https://github.com/Smile-SA/slidev-poll-ws-server/issues"
   },
+  "type": "module",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node ."
+    "start": "node --experimental-specifier-resolution=node ."
   },
   "keywords": [
     "vuejs",
@@ -31,9 +32,11 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
+    "fastify": "^4.13.0",
     "ws": "^8.12.1"
   },
   "devDependencies": {
+    "@types/node": "^18.14.5",
     "@types/ws": "^8.5.4",
     "typescript": "^4.9.5"
   }
